@@ -1,5 +1,10 @@
 2004-03-09  Daniel Jacobowitz  <drow@mvista.com>
 
+	* arm-tdep.c (arm_use_struct_convention): Look through typedefs.
+	* gdbtypes.c (check_typedef): Update comments.
+
+2004-03-09  Daniel Jacobowitz  <drow@mvista.com>
+
 	* arm-tdep.c (thumb_get_next_pc): Handle Thumb BLX.
 
 2004-03-07  Daniel Jacobowitz  <drow@mvista.com>
